--- a/css/main.css
+++ b/css/main.css
@@ -213,14 +213,12 @@ a.icon svg {
   transition: all 0.5s ease-out;
   object-fit:contain;
 }
-#imgs-panel .main img {
-  max-height: 100%;
-    width: 100%;
+#imgs-panel .main div {
   opacity:0;
-  transition: all 1s ease-out;
-  /*-webkit-box-shadow: 6px 17px 104px 24px rgba(0,0,0,0.13);
--moz-box-shadow: 6px 17px 104px 24px rgba(0,0,0,0.13);
-box-shadow: 6px 17px 104px 24px rgba(0,0,0,0.13);*/
+}
+
+#imgs-panel .main div:hover {
+  cursor: pointer;
 }
 
 #imgs-panel .main-image {
