--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,6 +1,6 @@
 $primary: #ffbb00;
 $secondary: #e9ecef;
-$tertiary: #00ce94;
+$tertiary: #8dd9bf;
 $dark: #4c4c4c;
 $light: #f5f5f5;
 
@@ -9,6 +9,8 @@ $dropdown-border-radius: 0;
 $dropdown-border-width: 0;
 $dropdown-font-size: 1.4rem;
 $dropdown-item-padding-y: 1rem;
+$link-color: #2a8a69;
+$link-hover-color: $tertiary;
 
 $theme-colors: (
   "primary": $primary,
