chore: font changes

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -31,7 +31,7 @@ h3.banner-text span {
 
 p,
 li {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Instrument Sans", sans-serif;
   font-weight: 400;
   font-size: 1.1rem;
 }
