--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -7,7 +7,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Inter", sans serif;
+  font-family: 'Inter', sans serif;
   font-style: normal;
   font-weight: 700;
 }
@@ -31,7 +31,7 @@ h3.banner-text span {
 
 p,
 li {
-  font-family: "Instrument Sans", sans-serif;
+  font-family: 'Instrument Sans', sans-serif;
   font-weight: 400;
   font-size: 1.1rem;
 }
@@ -69,6 +69,7 @@ button.btn,
 .form-check-input,
 a.btn {
   border-radius: 0px !important;
+  white-space: nowrap;
 }
 
 .banner .btn:hover {
@@ -193,6 +194,7 @@ img.raised {
 }
 .menu-item-expanded {
   text-decoration-color: white;
+  line-height: 1rem;
 }
 .sidebar.active div {
   visibility: visible;
@@ -266,7 +268,7 @@ div.profile {
 }
 
 div.profile:after {
-  content: "";
+  content: '';
   display: block;
   padding-bottom: 100%;
 }
@@ -305,7 +307,7 @@ div.profile:after {
 }
 
 .font-monospace {
-  font-family: "IBM Plex Mono" !important;
+  font-family: 'IBM Plex Mono' !important;
 }
 
 .bd-placeholder-img {
@@ -327,8 +329,7 @@ div.profile:after {
   background-color: rgba(0, 0, 0, 0.1);
   border: solid rgba(0, 0, 0, 0.15);
   border-width: 1px 0;
-  box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
-    inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1), inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
 }
 
 .b-example-vr {
@@ -454,12 +455,12 @@ a.navbar-logo {
   object-fit: cover; /* This will make the image cover the set height and width */
 }
 .card-title {
-  font-size: 12px; /* Adjust as needed */
+  font-size: 0.9rem; /* Adjust as needed */
   font-weight: 400;
   text-align: right;
 }
 .card-text {
-  font-size: 12px; /* Adjust as needed */
+  font-size: 0.9rem; /* Adjust as needed */
 }
 .card {
   background: none;
